Pass MapCoordinatesFlags through SVGLayoutSupport::mapLocalToAncestor

BUG=597745

Review-Url: https://codereview.chromium.org/2241833002
Cr-Commit-Position: refs/heads/master@{#411838}

Former-commit-id: 24787f3652aacb653940d81650fce15f70188494